--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
 services:
   - type: web
-    name: genie-proxy
+    name: genie-taapi-proxy
     env: python
-    buildCommand: "pip install --upgrade pip && pip install -r requirements.txt"
+    buildCommand: "cd ./ && pip install --upgrade pip && pip install -r ./requirements.txt"
     startCommand: "gunicorn app:app --bind 0.0.0.0:$PORT"
     plan: free
     envVars:
