--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,11 @@ services:
   - type: web
     name: genie-taapi-proxy
     env: python
-    buildCommand: "cd ./ && pip install --upgrade pip && pip install -r ./requirements.txt"
-    startCommand: "gunicorn app:app --bind 0.0.0.0:$PORT"
-    plan: free
+    buildCommand: |
+      pip install --upgrade pip
+      pip install -r requirements.txt
+    startCommand: |
+      gunicorn app:app --bind 0.0.0.0:$PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.10.13
